; ModuleID = '/home/carl/AnghaBench/git/extr_dir.c_common_prefix.c'
source_filename = "/home/carl/AnghaBench/git/extr_dir.c_common_prefix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pathspec = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @common_prefix(%struct.pathspec* %0) #0 {
  %2 = alloca %struct.pathspec*, align 8
  %3 = alloca i64, align 8
  store %struct.pathspec* %0, %struct.pathspec** %2, align 8
  %4 = load %struct.pathspec*, %struct.pathspec** %2, align 8
  %5 = call i64 @common_prefix_len(%struct.pathspec* %4)
  store i64 %5, i64* %3, align 8
  %6 = load i64, i64* %3, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %17

8:                                                ; preds = %1
  %9 = load %struct.pathspec*, %struct.pathspec** %2, align 8
  %10 = getelementptr inbounds %struct.pathspec, %struct.pathspec* %9, i32 0, i32 0
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i64 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i64, i64* %3, align 8
  %16 = call i8* @xmemdupz(i32 %14, i64 %15)
  br label %18

17:                                               ; preds = %1
  br label %18

18:                                               ; preds = %17, %8
  %19 = phi i8* [ %16, %8 ], [ null, %17 ]
  ret i8* %19
}

declare dso_local i64 @common_prefix_len(%struct.pathspec*) #1

declare dso_local i8* @xmemdupz(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
